<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tasksFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_tasks" />
    <item
        android:id="@+id/calendarFragment"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/pomodoroFragment"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_pomodoro" />
    <item
        android:id="@+id/statisticsFragment"
        android:icon="@android:drawable/ic_menu_report_image"
        android:title="@string/nav_statistics" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
