<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/tasksFragment">

    <fragment
        android:id="@+id/tasksFragment"
        android:name="com.taskmaster.ai.ui.tasks.TasksFragment"
        android:label="@string/nav_tasks"
        tools:layout="@layout/fragment_tasks">
        <action
            android:id="@+id/action_tasksFragment_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment" />
        <action
            android:id="@+id/action_tasksFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
    </fragment>

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.taskmaster.ai.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_calendar">
        <action
            android:id="@+id/action_calendarFragment_to_taskDetailFragment"
            app:destination="@id/taskDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/pomodoroFragment"
        android:name="com.taskmaster.ai.ui.pomodoro.PomodoroFragment"
        android:label="@string/nav_pomodoro"
        tools:layout="@layout/fragment_pomodoro" />

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.taskmaster.ai.ui.statistics.StatisticsFragment"
        android:label="@string/nav_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.taskmaster.ai.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/taskDetailFragment"
        android:name="com.taskmaster.ai.ui.tasks.TaskDetailFragment"
        android:label="任务详情"
        tools:layout="@layout/fragment_task_detail">
        <argument
            android:name="taskId"
            app:argType="long" />
        <action
            android:id="@+id/action_taskDetailFragment_to_addEditTaskFragment"
            app:destination="@id/addEditTaskFragment" />
    </fragment>

    <fragment
        android:id="@+id/addEditTaskFragment"
        android:name="com.taskmaster.ai.ui.tasks.AddEditTaskFragment"
        android:label="编辑任务"
        tools:layout="@layout/fragment_add_edit_task">
        <argument
            android:name="taskId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

</navigation>
